--- a/public/games/styles.css
+++ b/public/games/styles.css
@@ -1,16 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #121212;
-    margin: 0;
-    height: 100vh;
+    font-family: Arial, sans-serif;
+    background-color: #808080;
+    color: white;
     background-image: url('/Imgs/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    flex-direction: column;
 }
 
 .search-container {
@@ -49,7 +53,7 @@ body {
 .boxes-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 3.5vw;
+    gap: 2vw;
     max-width: 80vw;
     margin: 5vh auto;
     justify-content: center;
@@ -60,13 +64,13 @@ body {
 
 .box {
     position: relative;
-    width: 7vw;
-    height: 7vw; 
+    width: 5vw;
+    height: 5vw; 
     transition: transform 0.3s ease;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 2vw;
+    border-radius: 1vw;
     overflow: hidden;
     background-color: transparent;
 }
@@ -131,38 +135,39 @@ body {
     background: #ffffff;
 }
 
-.navbar {
-    display: flex;
-    gap: 2vw;
-    justify-content: center;
-    width: 100%;
-    padding: 1vh 0;
+.container {
+    display:flex;
+    height: 90vh;
+    align-items: center;
+    padding-top: 12vh;
+    padding-left: 1.3vw;
     position: fixed;
-    top: 0;
-    background: rgba(255, 255, 255, 0.2);
+}
+
+/* Sidebar Nav */
+.sidebar {
+    background-color: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    z-index: 10;
+    width: 6vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 4vh;
+    gap: 4.7vh;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 50px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-.nav-button {
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 2vh;
-    border: 0.4vh solid rgba(255, 255, 255, 0.4);
-    padding: 0.5vw 2vw;
-    font-size: 3vh;
-    text-transform: uppercase;
-    letter-spacing: 0.3vh;
-    cursor: pointer;
-    color: #fff;
-    box-shadow: 0 1vh 1.5vh rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+.sidebar img {
+    width: 4.5vw;
+    height: 10vh;
+    transition: transform 0.3s ease;
 }
 
-.nav-button:hover {
-    transform: scale(1.05);
-    box-shadow: 0 2vh 3vh rgba(0, 0, 0, 0.5);
+.sidebar img:hover {
+    transform: scale(1.1);
 }
-
