--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #808080;
     color: white;
-    background-image: url('/img/background.jpg');
+    background-image: url('/Imgs/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
