--- a/public/settings/styles.css
+++ b/public/settings/styles.css
@@ -1,18 +1,32 @@
-body {
-    display: flex;
-    flex-direction: column; /* Allow vertical stacking */
-    justify-content: flex-start; /* Align items to the top */
-    align-items: center; /* Center horizontally */
-    background-color: #121212; /* Background color */
-    overflow: hidden;
+*{
     margin: 0;
-    height: 100vh; /* Full height of the viewport */
-    background-image: url('/Imgs/background.jpg');
-    background-size: cover; /* Stretches the background to cover the entire screen */
-    background-repeat: no-repeat; /* Prevents background from repeating */
-    background-position: center; /* Centers the background image */
+    padding: 0;
+    box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    font-family: Arial, sans-serif;
+    background-color: #808080;
+    color: white;
+    background-image: url('/Imgs/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    flex-direction: column;
+}
+
+.container {
+    display:flex;
+    height: 90vh;
+    align-items: center;
+    padding-top: 12vh;
+    padding-left: 1.3vw;
+    position: fixed;
+}
+
+/* Sidebar Nav */
 .sidebar {
     background-color: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
@@ -28,7 +42,6 @@ body {
     border-radius: 50px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
-
 
 .sidebar img {
     width: 4.5vw;
