--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@ body {
     align-items: center;
     padding-top: 12vh;
     padding-left: 1.3vw;
+    position: fixed;
 }
 
 /* Sidebar Nav */
@@ -39,7 +40,6 @@ body {
     border-radius: 50px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
-
 
 .sidebar img {
     width: 4.5vw;
