--- a/public/search.css
+++ b/public/search.css
@@ -21,6 +21,7 @@ body {
     display: flex; /* Use flexbox for the form */
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center form items */
+    justify-content: center;
     margin-bottom: 2vh; /* Space between form and shortcuts */
 }
 
@@ -75,10 +76,9 @@ body {
     align-items: center;
     padding-top: 12vh;
     padding-left: 1.3vw;
-    position: fixed;
 }
 
-/* Sidebar Nav */
+
 .sidebar {
     background-color: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
@@ -94,6 +94,7 @@ body {
     border-radius: 50px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 }
+
 
 .sidebar img {
     width: 4.5vw;
