--- a/public/settings/styles.css
+++ b/public/settings/styles.css
@@ -19,6 +19,7 @@ body {
 
 .container {
     display:flex;
+    position: fixed;
     height: 90vh;
     align-items: center;
     padding-top: 12vh;
@@ -52,17 +53,22 @@ body {
 .sidebar img:hover {
     transform: scale(1.1);
 }
+
 .Buttons {
+    margin-top: 35vh;
     text-align: center;
     color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
 }
 
-.btns {
-    width: 3vw;
+#enableAboutBlank, #disableAboutBlank {
+    font-size: 2.5vh;
     background-color: blue;
-    color: white;
+    margin-top: 1vh;
+    width: 6vw;
+    height: 5vh;
+    border: none;
+    border-radius: 3vw;
 }
